# ComfyUI-FishAudioS2

./: .gitignore  README.md  README_ZH.md  __init__.py  pyproject.toml  requirements.txt
fish_speech_src/fish_speech/inference_engine/: __init__.py  reference_loader.py
fish_speech_src/fish_speech/models/text2semantic/: inference.py  llama.py
nodes/: loader.py  model_cache.py  multi_speaker_node.py  tts_node.py  voice_clone_node.py
