[project]
name = "ComfyUI-fish-audio-s2"
description = "ComfyUI custom nodes for Fish Audio S2-Pro TTS — voice clone, multi-speaker, and text-to-speech"
version = "0.2.7"
license = {file = "LICENSE"}
dependencies = [
    "numpy",
    "tqdm",
    "soundfile",
    "loguru",
    "transformers",
    "einops",
    "einx[torch]==0.2.2",
    "librosa",
    "rich",
    "ormsgpack",
    "pydantic",
    "tiktoken",
    "cachetools",
    "zstandard",
    "resampy",
    "protobuf",
    "safetensors",
    "pyrootutils",
    "natsort>=8.4.0",
    "loralib>=0.1.2",
    "hydra-core>=1.3.2",
]

[project.urls]
Repository = "https://github.com/Saganaki22/ComfyUI-FishAudioS2"

[tool.comfy]
PublisherId = "saganaki22"
DisplayName = "Fish Audio S2 TTS"
Icon = "https://avatars.githubusercontent.com/u/84208527"
